--- a/src/components/pages/entityManage/entityManage.scss
+++ b/src/components/pages/entityManage/entityManage.scss
@@ -1,18 +1,18 @@
 @import "../../../scss/common.scss";
 
-.policyManage{
+.entityManage{
     flex:1;
 }
 
-.policyManage_wrap{
+.entityManage_wrap{
     display: flex;
 }
 
-.policyManage_wrap_left{
+.entityManage_wrap_left{
     flex: 1;
     margin-right: 10px;
 }
 
-.policyManage_wrap_right{
+.entityManage_wrap_right{
     margin : 0px 0px;
 }
